# greedy-scheduling

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  config.toml  main.cpp
include/OPTS/: graph_part.hpp  huawei_parser.hpp  json_dumper.hpp  logger_config.hpp  options.hpp  output_class.hpp
include/OPTS/greedy/: greedy_algo.hpp  schedule.hpp  schedule_data.hpp  time_diagram.hpp  time_schedule.hpp
src/: graph_part.cpp  json_dumper.cpp  logger_config.cpp  options.cpp  parser.cpp
src/greedy/: greedy_algo.cpp  schedule.cpp  schedule_data.cpp  time_diagram.cpp  time_schedule.cpp
